--- a/src/pages/staffing.astro
+++ b/src/pages/staffing.astro
@@ -118,7 +118,7 @@ const howItWorksSteps = [
             <img
               src={logo.image}
               alt={logo.name}
-              class="w-full h-auto max-h-12 sm:max-h-14 object-contain opacity-70 hover:opacity-100 transition-opacity duration-300"
+              class="w-full h-auto max-h-12 sm:max-h-14 object-contain"
               loading="lazy"
             />
           </div>
