--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -257,6 +257,10 @@ const {
     background-color: white !important;
     border: 2px solid #343A5A !important;
     border-color: #343A5A !important;
+    border-top-color: #343A5A !important;
+    border-right-color: #343A5A !important;
+    border-bottom-color: #343A5A !important;
+    border-left-color: #343A5A !important;
     color: #000000 !important;
   }
 
@@ -266,6 +270,10 @@ const {
     background-color: #EC7A00 !important;
     border: 2px solid #EC7A00 !important;
     border-color: #EC7A00 !important;
+    border-top-color: #EC7A00 !important;
+    border-right-color: #EC7A00 !important;
+    border-bottom-color: #EC7A00 !important;
+    border-left-color: #EC7A00 !important;
     color: white !important;
   }
 
