--- a/src/pages/coaching.astro
+++ b/src/pages/coaching.astro
@@ -89,8 +89,8 @@ const videoTestimonials = [
         </div>
         <div class="relative lg:absolute lg:right-0 lg:top-0 lg:w-1/2 lg:h-full flex items-end justify-end">
           <img
-            src="https://images.pexels.com/photos/2182970/pexels-photo-2182970.jpeg?auto=compress&cs=tinysrgb&w=800&h=1000&fit=crop"
-            alt="Business leader"
+            src="/images/people/helm-ceo-josh-klenoff-headhot-qjknnjcxfmg5scwrifh6biwf8tb74yddazgypmqpz4.webp"
+            alt="Josh Klenoff - Helm CEO"
             class="w-full h-[500px] lg:h-full object-cover object-top"
             width="600"
             height="800"
