--- a/src/pages/coaching.astro
+++ b/src/pages/coaching.astro
@@ -61,15 +61,15 @@ const videoTestimonials = [
   <section class="relative bg-gradient-to-br from-[#3d4463] via-[#343A5A] to-[#2d3350] overflow-hidden" style="height: 100vh;">
     <div class="w-full px-4 sm:px-8 md:px-12 lg:px-16 max-w-[1920px] mx-auto h-full flex items-center">
       <div class="grid lg:grid-cols-2 gap-12 items-center w-full">
-        <div class="text-white py-8 lg:py-16 max-w-[600px]">
-          <h1 class="font-bold mb-6 text-white" style="font-size: 50px; line-height: 1.2; font-family: 'Montserrat', sans-serif;">
+        <div class="text-white py-8 lg:py-16 lg:pl-12 max-w-[650px]">
+          <h1 class="font-bold mb-6 text-white whitespace-nowrap" style="font-size: 50px; line-height: 1.2; font-family: 'Montserrat', sans-serif; font-weight: 700;">
             Want to scale your company?
           </h1>
-          <div class="mb-8 text-white" style="font-size: 22px; line-height: 1.5; font-family: 'Montserrat', sans-serif;">
+          <div class="mb-8 text-white" style="font-size: 22px; line-height: 1.5; font-family: 'Montserrat', sans-serif; font-weight: 400;">
             <p class="mb-4">
               You'll need a cohesive leadership team with strong accountability and alignment. This isn't something you either have or don't have. It's a science. We've seen it with over 5,000 companies.
             </p>
-            <p class="font-semibold">
+            <p style="font-weight: 600;">
               Want to know the secret?
             </p>
           </div>
@@ -87,11 +87,11 @@ const videoTestimonials = [
             </svg>
           </Button>
         </div>
-        <div class="hidden lg:block relative lg:absolute lg:right-0 lg:bottom-0 lg:w-1/2" style="height: 85vh;">
+        <div class="hidden lg:block relative lg:absolute lg:right-0 lg:bottom-0 lg:w-[45%]" style="height: 85vh;">
           <img
             src="/images/people/helm-ceo-josh-klenoff-headhot-qjknnjcxfmg5scwrifh6biwf8tb74yddazgypmqpz4.webp"
             alt="Josh Klenoff - Helm CEO"
-            class="w-full h-full object-cover object-top"
+            class="w-full h-full object-contain object-bottom"
             width="600"
             height="800"
             loading="eager"
